# petitpendu

./: .gitignore  README.md  pyproject.toml  requirements.txt
application/: domain.py  helpers.py  services.py
data/: dao.py
presentation/: app.py  tui.py
src/application/: domain.py  services.py
src/data/: dao.py
src/presentation/: app.py  tui.py
