[tool.poetry]
name = "petitpendu"
version = "0.1.0"
description = "Petit jeu du pendu"
authors = ["Yann Mazita <dev.mazita@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
unidecode = "^1.3.6"

[tool.poetry.scripts]
pendu = "src.presentation.app:main"

[tool.pyright]
include = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
